# qs

./: LICENSE  README.md  installer.sh  qs.cabal
src/: Main.hs  output.qstat
